--- a/en/傒/傒.11172.wikitext
+++ b/en/傒/傒.11172.wikitext
@@ -12,12 +12,16 @@
 ==Chinese==
 {{zh-forms}}
 
+===Glyph origin===
+{{Han etym}}
+{{Han compound|人|奚|ls=psc|alt1=亻|c1=s|c2=p|t1=person}}.
+
 ===Etymology 1===
 
 ====Pronunciation====
 {{zh-pron
 |m=xī
-|c=hai4,hai6
+|c=hai4
 |mc=y
 |oc=y
 |ma=
@@ -31,17 +35,26 @@
 # {{lb|zh|obsolete}} people from [[Jiangxi]]
 # {{†}} {{zh-alt-form|徯|to [[wait]]}}
 # {{†}} {{zh-alt-form|蹊|tr=xī|[[footpath]]}}
-# {{zh-alt-form|奚}}
+# {{†}} {{zh-alt-form|奚}}
 # {{surname|zh}}
-
-====Usage notes====
-In the third sense, the Han character 傒 is the 18th [[tetragram]] of the [[Taixuanjing]] ([[𝌗]]).
+# 18th [[tetragram]] of the {{w|Taixuanjing}}
 
 ====Compounds====
 {{zh-der|傒落|僥傒|傒倖}}
 
 ===Etymology 2===
-{{zh-see|繫|v|to [[arrest]]; to [[imprison]]}}
+
+====Pronunciation====
+{{zh-pron
+|m=xì
+|c=hai6
+|cat=v
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{zh-alt-form|繫|tr=xì|to [[arrest]]; to [[imprison]]}}
 
 ----
 
