--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -315,6 +315,7 @@ Displaced native {{m+|enm|bouk}}, {{m|enm|buc|t=belly, stomach}} from {{m+|ang|b
 * Estonian: {{t+|et|kõht}}, {{t|et|magu}}
 * Finnish: {{t+|fi|maha}}, {{t+|fi|vatsa}}
 * French: {{t+|fr|ventre|m}}, {{t+|fr|bedon|m}} ([[pot belly]])
+* Galician: {{t+|gl|bandullo|m}}, {{t+|gl|barriga|f}}
 * Georgian: {{t|ka|მუცელი}}
 * German: {{t+|de|Bauch|m}}
 * Greek: {{t+|el|στομάχι|n}}, {{t+|el|κοιλιά|f}}
