--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -41,6 +41,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 #: {{ux|en|The book was due to be released today, but it was '''pulled''' at the last minute over legal concerns.}}
 # {{lb|en|transitive}} To [[retrieve]] or [[generate]] for use.
 #: {{ux|en|I'll have to '''pull''' a part number for that.}}
+#: {{ux|en|This computer file is incorrect. Can we '''pull''' the old version from your backups?}}
 #* '''2006''', Michael Bellomo, Joel Elad, ''How to Sell Anything on Amazon...and Make a Fortune!''
 #*: They'll go through their computer system and '''pull''' a report of all your order fulfillment records for the time period you specify.
 # {{lb|en|transitive|informal}} To [[do]] or [[perform]].
