--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -48,6 +48,8 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Albanian: {{t+|sq|vjell}}
 * American Sign Language: {{t|ase|5@Mouth-5@FromUlnarTipFinger 5@FromMouth-5@FromUlnarTipFinger}}
 * Arabic: {{t|ar|تَقَيَّأَ}}, {{t|ar|قَاءَ}}, {{t|ar|اِسْتَفْرَغَ}}
+*: Iraqi Arabic: {{t|acm|زاع|tr=zɑ̄ʕ}}
+*: Egyptian Arabic: {{t|arz|رجّع|tr=raggaʕ}}, {{t|arz|طرّش|tr=ṭɑrreš}}
 *: Moroccan Arabic: {{t|ary|تقيا|tr=tqiyya}}, {{t|ary|رد|tr=radd}}
 * Armenian: {{t|hy|հետ տալ}}, {{t+|hy|փսխել}}, {{t+|hy|ործկալ}}
 * Aromanian: {{t|rup|vom}}, {{t|rup|vomu}}
