--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -6,8 +6,10 @@
 
 ===Etymology===
 [[File:Acacia constricta branch.jpg|thumb|Tree branches]]
+{{dercat|en|cel}}
+From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed from {{der|en|fro|branche}}, {{m|fro|brance}}, from {{der|en|LL.|branca||footprint”, later also “paw, claw}}, of unknown origin, possibly from {{der|en|cel-gau|*vranca}}, from {{der|en|ine-pro|*wrónk-eh₂}}.<ref>{{R:American_Heritage_Dictionary|branch}}</ref> 
 
-From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed from {{der|en|fro|branche}}, {{m|fro|brance}}, from {{der|en|LL.|branca||footprint”, later also “paw, claw}}, of unknown origin, possibly from {{der|en|cel-gau|*vranca}}. Indo-European cognates include {{cog|non|vró||angle, corner}}, {{cog|lt|rankà||hand}}, {{cog|cu|рѫка||hand}}, {{cog|sq|rangë||yardwork}}.
+Indo-European cognates include {{cog|non|vró||angle, corner}}, {{cog|lt|rankà||hand}}, {{cog|cu|рѫка||hand}}, {{cog|sq|rangë||yardwork}}.
 
 ===Pronunciation===
 * {{a|RP}} {{enPR|bränch}}, {{IPA|en|/bɹɑːntʃ/}}
@@ -445,6 +447,9 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 * {{ttbc|te}}: {{t+check|te|చీలు}}, {{t-check|te|చీలిపోవు}}
 {{trans-mid}}
 {{trans-bottom}}
+
+===References===
+<references/>
 
 ===Further reading===
 * {{pedia}}
