--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -274,20 +274,19 @@ The {{m|en|Singapore}} sense derives from the pre-[[World War Two]] kanji spelli
 ==Korean==
 
 ===Etymology===
-From {{der|ko|ltc|sort=성|-}} {{ltc-l|星|id=1}}.
+From {{der|ko|ltc|sort=성|-}} {{ltc-l|星}}.
 {{hanja-ety
-|dk={{hanja-dongguk|셔ᇰ|syèng}}
-|m={{hanja-hunmong|셔ᇰ|syèng|天文#상01A}}
-|mh=[[별|별〯]] 셔ᇰ 
-|em={{hanja-juhae|셩|syeng}}
-|emun=[[별]] 셩
+|dk={{okm-l|셔ᇰ|syèng}}
+|m={{okm-l|셔ᇰ|syèng}}
+|mh={{okm-l|별〯|pyěl}}
+|ml=天文#상01A
 }}
 ===Pronunciation===
 {{ko-hanja-pron|성}}
 
 ===Hanja===
 {{ko-hanja-search}}
-{{ko-hanja/new|별|성}}
+{{ko-hanja|별|성}}
 
 # {{hanja form of|성|[[star]]; [[planet]]}}
 
