--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -6,7 +6,10 @@
 * {{l|en|speake}} {{qual|obsolete}}
 
 ===Etymology===
-From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, alteration of earlier {{m|ang|sprecan|t=to speak}}, from {{inh|en|gem-pro|*sprekaną|t=to speak, make a sound}}, from {{der|en|ine-pro|*spreg-|t=to make a sound, utter, speak}}. Cognate with {{cog|fy|sprekke}}, {{cog|nds|spreken|t=to speak}}, {{cog|nl|spreken|t=to speak}}, {{cog|de|sprechen|t=to speak}},  and also with {{cog|sq|shpreh|t=to utter, voice, express}} through Indo-European.
+From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, alteration of earlier {{m|ang|sprecan|t=to speak}}, from {{inh|en|gmw-pro|*sprekan}}, from {{inh|en|gem-pro|*sprekaną|t=to speak, make a sound}}, from {{der|en|ine-pro|*spreg-|t=to make a sound, utter, speak}}. 
+
+{{rel-top|Cognates:}}
+Cognate with {{cog|fy|sprekke}}, {{cog|nds|spreken|t=to speak}}, {{cog|nl|spreken|t=to speak}}, {{cog|de|sprechen|t=to speak}},  and also with {{cog|sq|shpreh|t=to utter, voice, express}} through Indo-European. {{rel-bottom}}
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|en|/spiːk/}}
