--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -608,6 +608,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 {{trans-bottom}}
 
 ===Etymology 2===
+{{wikipedia|lang=en|Contract bridge}}
 From the earlier form (name of an older card game) ''biritch'', probably from {{der|en|ru|бири́ч}} (per the OED), or else from {{der|en|tr|bir}}-{{m|tr|üç}}, "one-three".<ref>"bridge." *OED 2nd edition. 1989. (online)</ref><ref>[http://www.etymonline.com/index.php?term=bridge "bridge."] Online Etymology Dictionary. 2008.</ref>
 
 ====Noun====
