--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -680,6 +680,7 @@ From the earlier form (name of an older card game) ''biritch'', probably from {{
 ----
 
 ==Catalan==
+{{wikipedia|lang=ca|Bridge (joc)}}
 
 ===Etymology===
 Borrowed from {{bor|ca|en|bridge}}.
