--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -693,6 +693,8 @@ Borrowed from {{bor|ca|en|bridge}}.
 ----
 
 ==Danish==
+{{wikipedia|lang=da|Bridge}}
+
 
 ===Etymology===
 From {{bor|da|en|bridge}}.
