--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -814,6 +814,7 @@ Borrowed from {{bor|id|en|bridge}}.
 ----
 
 ==Italian==
+{{wikipedia|lang=it|Bridge}}
 
 ===Etymology===
 Borrowed from {{bor|it|en|bridge}}.
