--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -903,6 +903,18 @@ Borrowed from {{bor|stq|en|bridge}}.
 
 ----
 
+==Sicilian==
+{{wikipedia|lang=scn|Bridge}}
+
+===Etymology===
+Borrowed from {{bor|scn|en|bridge}}.
+
+===Noun===
+
+# {{lb|scn|card games}} [[#Etymology_2|bridge]] {{gloss|card game}}
+
+----
+
 ==Spanish==
 {{wikipedia|lang=es|Bridge (juego)}}
 
