--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -898,6 +898,7 @@ From {{bor|ro|en|bridge}}.
 Borrowed from {{bor|stq|en|bridge}}.
 
 ===Noun===
+{{stq-noun}}
 
 # {{lb|stq|card games}} [[#Etymology_2|bridge]] {{gloss|card game}}
 
