--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -911,7 +911,7 @@ Borrowed from {{bor|stq|en|bridge}}.
 Borrowed from {{bor|scn|en|bridge}}.
 
 ===Noun===
-bridge
+'''bridge'''
 
 # {{lb|scn|card games}} [[#Etymology_2|bridge]] {{gloss|card game}}
 
