--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -829,6 +829,19 @@ Borrowed from {{bor|it|en|bridge}}.
 
 ----
 
+==Limburgs==
+{{wikipedia|lang=li|Bridge (kaartspeul)}}
+
+===Etymology===
+Borrowed from {{bor|li|en|bridge}}.
+
+===Noun===
+{{li-noun}}
+
+# {{lb|li|card games}} [[#Etymology_2|bridge]] {{gloss|card game}}
+
+----
+
 ==Norwegian Bokmål==
 {{wikipedia|lang=no}}
 
