--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -699,7 +699,7 @@ Borrowed from {{bor|eu|en|bridge}}.
 Borrowed from {{bor|ca|en|bridge}}.
 
 ===Noun===
-{{ca-noun}}
+{{ca-noun|m}}
 
 # {{lb|ca|card games}} [[#Etymology_2|bridge]] {{gloss|card game}}
 
