--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -327,6 +327,7 @@ From {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|dum|b
 {{trans-bottom}}
 {{trans-top|color}}
 * French: {{t+|fr|rouge brique}}
+{{trans-bottom}}
 {{checktrans-top}}
 * Breton: {{t+check|br|brikenn|f}}
 * Chinese:
