--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -989,7 +989,10 @@ From {{der|sv|en|-}}.
 ===Etymology===
 Borrowed from {{bor|cy|en|bridge}}.
 
+===Pronunciation===
+* {{IPA|cy|/brɪd͡ʒ/}}
+
 ===Noun===
-{{cy-noun}}
+{{cy-noun|m}}
 
 # {{lb|cy|card games}} [[#Etymology_2|bridge]] {{gloss|card game}}
