--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -28,7 +28,7 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 # {{lb|en|fortifications}} The flat area of [[wall]] which connects two [[bastions]] or [[towers]]; the main area of a fortified wall.
 #* {{RQ:Flr Mntgn Essays}}, Folio Society, 2006, vol.1, p.220:
 #*: Captain ''Rense'', beleagring the Citie of ''Errona'' for us,{{...}}caused a forcible mine to be wrought under a great '''curtine''' of the walles{{nb...}}.
-# {{lb|en|euphemistic|also "[[final curtain]]"}} [[death|Death]].
+# {{lb|en|euphemistic|also "[[final curtain]]"|sometimes in the plural}} [[death|Death]].
 #* '''1979''', {{w|Monty Python}}, ''{{w|Always Look on the Bright Side of Life}}''
 #*: For life is quite absurd / And death's the final word / You must always face the '''curtain''' with a bow.
 # {{lb|en|architecture}} That part of a wall of a building which is between two [[pavilion]]s, [[tower]]s, etc.
