t+is:[[hold]] t+haw:[[ʻiʻo]] ([[WT:EDIT|Assisted]]) <flesh#61929132>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -75,9 +75,11 @@ From {{inh|en|enm|flesh}}, {{m|enm|flesch}}, {{m|enm|flæsch}}, from {{inh|en|an
 * German: {{t+|de|Fleisch|n}}
 * Greek: {{t+|el|σάρκα|f}}
 *: Ancient: {{t|grc|σάρξ|f}}
+* Hawaiian: {{t|haw|ʻiʻo}}
 * Hebrew: {{t+|he|בָּשָׂר|m|tr=basár}}
 * Hindi: {{t+|hi|लहम|m}}, {{t+|hi|क्रव्य|m}}, {{t+|hi|मांस|m}}
 * Hungarian: {{t+|hu|hús}}
+* Icelandic: {{t+|is|hold|n}}
 * Ido: {{t+|io|karno}}
 * Indonesian: {{t+|id|daging}}
 * Irish: {{t+|ga|feoil|f}}
