/* Synonyms */ <New Zealand#61935279>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -27,6 +27,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 * {{l|en|Enzed}}
 * {{l|en|Godzone}} {{q|New Zealand|informal}}
 * {{l|en|Kiwiland}}
+* {{l|en|Nu Zillund}} {{q|humorous}}
 * {{l|en|Land of the Long White Cloud}} {{qualifier|Maori name translated into English}}
 * {{l|en|Maoriland}}
 * {{l|en|NZ}} {{qualifier|abbreviation}}
