--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -417,7 +417,7 @@ as a colour adjective from the late 14th century.
 # {{lb|enm|rare}} Resembling saffron in taste.
 
 ====Descendants====
-* {{desc|en|saffron}}
+* {{desctree|en|saffron}}
 * {{desc|sco|sefron}}
 
 ====References====
