--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -227,7 +227,7 @@ Displaced native {{m+|enm|bouk}}, {{m|enm|buc|t=belly, stomach}} from {{m+|ang|b
 * Rusyn: {{t|rue|жалу́док|m}}
 * Sabah Bisaya: {{t|bsy|tinai'}}
 * Sanskrit: {{t+|sa|उदरम्|n}}, {{t+|sa|उदर|m}}
-* Sardinian: {{t-needed|sc}}
+* Sardinian: {{t+|sc|istogomo|m}}, {{t+|sc|istocomo|m}}
 * Scottish Gaelic: {{t|gd|stamag|f}}, {{t|gd|brù|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|желудац|m|sc=Cyrl}}, {{t|sh|стомак|m|sc=Cyrl}}
