t+za:[[makgyamj]] t-balance t+za:[[lwggyamj]] ([[WT:EDIT|Assisted]]) <olive#61980520>

--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -94,9 +94,9 @@ From {{inh|en|enm|olyve}}, from {{der|en|fro|olive||olive, olive tree}}, from {{
 * Japanese: {{t+|ja|オリーブ|tr=orību}}
 * Karekare: {{t|kai|zambatu}}
 * Kazakh: {{t|kk|зәйтүн|sc=Cyrl}}
-{{trans-mid}}
 * Khmer: {{t|km|អូលីវ}}
 * Korean: {{t+|ko|올리브}}
+{{trans-mid}}
 * Kurdish:
 *: Central Kurdish: {{t+|ckb|زەیتوون}}
 *: Northern Kurdish: {{t+|kmr|zeytûn|f}}
@@ -158,6 +158,7 @@ From {{inh|en|enm|olyve}}, from {{der|en|fro|olive||olive, olive tree}}, from {{
 * Welsh: {{t|cy|olewydd|f-p}}
 * Yiddish: {{t|yi|אָליוו|m}}, {{t|yi|מאַסלינע|f}}
 * Zazaki: {{t|zza|zeytun|f}}
+* Zhuang: {{t|za|makgyamj}}, {{t|za|lwggyamj}}
 {{trans-bottom}}
 
 {{trans-top|wood}}
