--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -842,7 +842,7 @@ Borrowed from {{bor|it|en|bridge}}.
 
 ----
 
-==Limburgs==
+==Limburgish==
 {{wikipedia|lang=li|Bridge (kaartspeul)}}
 
 ===Etymology===
