/* Derived terms */ <bridge#61999340>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -82,6 +82,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |bowstring bridge
 |bridge loan
 |bridge mount
+|Bridge of Allan
 |Bridge of Dun
 |Bridge of Earn
 |Bridge of Orchy
