--- a/en/i/ich.12974.wikitext
+++ b/en/i/ich.12974.wikitext
@@ -130,7 +130,7 @@ Ripuarian (''regional forms'': Aachen [A], Cologne [C]; ''reduced or unstressed 
 | '''{{l|gmw-cfr|mir}}''' <br> {{l|gmw-cfr|meer}} [C] <br> {{l|gmw-cfr|mer}} (''red.'') <br> {{l|gmw-cfr|vir}} [A], {{l|gmw-cfr|ver}} (''red.'') || '''{{l|gmw-cfr|ühr}}''' <br> {{l|gmw-cfr|ehr}} [C] <br> {{l|gmw-cfr|er}} (''red.'') || colspan="3" | '''{{l|gmw-cfr|sei}}''', {{l|gmw-cfr|sie}} <br> {{l|gmw-cfr|se}} (''red.'')
 |-
 ! Dative
-| '''{{l|gmw-cfr|us}}''', {{l|gmw-cfr|uns}} <br> {{l|gmw-cfr|os}}, {{l|gmw-cfr|ons}} [A] || '''{{l|gmw-cfr|üch}}''' || colspan="3" |  '''{{l|gmw-cfr|inne}}''' <br> {{l|gmw-cfr|hönne}} [A] (or = ''nom.'') <br> {{l|gmw-cfr|en}} (''red.'')
+| '''{{l|gmw-cfr|us}}''', {{l|gmw-cfr|uns}} <br> {{l|gmw-cfr|os}}, {{l|gmw-cfr|ons}} [A] || '''{{l|gmw-cfr|üch}}''' || colspan="3" |  '''{{l|gmw-cfr|inne}}''' <br> {{l|gmw-cfr|hön}}, {{l|gmw-cfr|hönne}} [A] (or = ''nom.'') <br> {{l|gmw-cfr|en}} (''red.'')
 |-
 ! Accusative
 | = ''dat.'' || = ''dat.'' || colspan="3" | = ''nom.'' <br> [A] = ''nom.'' or ''dat.''
