--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -41,11 +41,9 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 * {{l|en|Enzedder}}
 * {{l|en|New Zealander}}
 * {{l|en|New Zealand English}}
-* {{l|en|New Zealandese}}
 * {{l|en|New Zealand flax}}
-* {{l|en|New Zealandian}}
+* {{l|en|Manawanian}}
 * {{l|en|New Zealandic}}
-* {{l|en|New Zealandish}}
 * {{l|en|New Zealandress}}
 * {{l|en|New Zealand tea}}
 * {{l|en|Zealandia}}
