--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -1,6 +1,7 @@
 ==English==
 
 ===Etymology===
+{{rfe|en}}
 From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlement in [[Batavia]], which in turn had been named after the Dutch province of [[Zeeland]].
 
 ===Pronunciation===
