--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -25,6 +25,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 ====Synonyms====
 * {{l|en|Aotearoa}}
 * {{l|en|Aotearoa New Zealand}}
+*[[manawa|Manawa]]
 * {{l|en|Enzed}}
 * {{l|en|Godzone}} {{q|New Zealand|informal}}
 * {{l|en|Kiwiland}}
