--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -248,6 +248,7 @@ The meaning of ''to ejaculate'' is considered vulgar slang. Many style guides an
 *: Old Irish: {{tt|sga|do·icc}}, {{tt|sga|do·tét}}
 * Istriot: {{tt|ist|vignì}}
 * Italian: {{tt+|it|venire}}
+* Jamaican Creole: {{t|jam|come}}
 * Japanese: {{tt+|ja|来る|tr=くる, kuru}}, {{tt+|ja|いらっしゃる|tr=irassharu}} {{qualifier|honorific}}, {{tt|ja|おいでになる|tr=o-ide ni naru}} {{qualifier|honorific}}, {{tt|ja|参る|tr=まいる, mairu}} {{qualifier|humble}}
 * Kamta: {{tt|rkt|aṣ}}
 * Karakhanid: {{tt|xqa|کَلْماكْ|tr=kelmēk}}
