--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -374,7 +374,7 @@ The meaning of ''to ejaculate'' is considered vulgar slang. Many style guides an
 * Hungarian: {{tt+|hu|megjön}}, {{tt+|hu|jön}}
 * Irish: {{tt|ga|tar}}
 {{trans-mid}}
-* Jamaican Creole: {{t|jam|come}}, {{t|jam|reach}}
+* Jamaican Creole: {{t|jam|come}}, {{t|jam|reach}}, {{t|jam|touch een}}
 * Japanese: {{tt+|ja|着く|tr=tsuku|sc=Jpan}}
 * Korean: {{tt+|ko|도착하다}}, {{tt+|ko|이르다}}
 * Macedonian: {{tt|mk|доаѓа}}, {{tt|mk|пристига}}
