--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -421,6 +421,9 @@ Borrowed from {{bor|cy|ang|hætt}}.
 
 ==Yola==
  
+===Etymology===
+From {{inh|yol|enm|hete}}, from {{inh|yol|ang|hǣte}}. 
+
 ===Noun===
 {{head|yol|noun}}
  
