t+cmn:[[潛變]] t+cmn:[[潜变]] ([[WT:EDIT|Assisted]]) <creep#62145336>

--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -236,6 +236,8 @@ From the above verb.
 {{trans-bottom}}
 
 {{trans-top|gradual deformation of material under stress}}
+* Chinese:
+*: Mandarin: {{t|cmn|潛變}}, {{t|cmn|潜变|tr=qiánbiàn}}
 * Finnish: {{t+|fi|viruminen}}
 * German: {{t|de|Kriechen}}
 {{trans-mid}}
