--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -55,6 +55,9 @@ From {{inh|en|enm|France}}, borrowed from {{der|en|frm|France}}, from {{der|en|f
 |Francophone
 |Francophonie
 |Frankland
+|Franc
+|franc
+|lingua franca
 |French
 |[[Frenchie]], [[Frenchy]]
 |Frenchify
