t+ang:[[gyldenfeax]] t+ang:[[hwitlocced]] ([[WT:EDIT|Assisted]]) <blond#62173023>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -58,6 +58,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Macedonian: {{t|mk|рус|f}}, {{t|mk|плав|f}}
 * Mongolian: {{t+|mn|шар}}
 * Norman: {{t|nrf|bliond}}
+* Old English: {{t|ang|gyldenfeax}}, {{t|ang|hwitlocced}}
 * Plautdietsch: {{t|pdt|blond}}
 * Polish: {{t+|pl|blond}}
 * Portuguese: {{t+|pt|loiro}}, {{t+|pt|louro}}
