--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -3,7 +3,7 @@
 {{wikivoyage}}
 
 ===Alternative forms===
-* {{alter|en|UK|U.K}}
+* {{alter|en|UK|}}
 
 ===Etymology===
 From {{com|en|united|kingdom}}, first attested from 1706.
