added Romanian definition <mandat#62229578>

--- a/en/m/mandat.1837.wikitext
+++ b/en/m/mandat.1837.wikitext
@@ -112,6 +112,21 @@ From {{bor|pl|de|Mandat}}, from {{der|pl|la|mandātum}}.
 
 ----
 
+==Romanian==
+
+===Etymology===
+From {{bor|ro|fr|mandat}}
+
+===Noun===
+{{ro-noun|n|mandate}}
+
+# [[mandate]]
+
+====Declension====
+{{ro-noun-n}}
+
+----
+
 ==Serbo-Croatian==
 
 ===Pronunciation===
