--- a/en/傏/傏.11167.wikitext
+++ b/en/傏/傏.11167.wikitext
@@ -4,13 +4,17 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=|canj=OILR|ids=⿰亻唐}}
 
-====References====
+===Further reading===
 * {{Han ref|kx=0113.070|dkj=00953|dj=0240.140|hdz=10205.040|uh=508F|ud=20623}}
 
 ----
 
 ==Chinese==
 {{zh-forms}}
+
+===Glyph origin===
+{{Han etym}}
+{{Han compound|亻|唐|c1=s|c2=p|ls=psc|t1=person}}.
 
 ===Pronunciation===
 {{zh-pron
@@ -23,12 +27,12 @@
 }}
 
 ===Definitions===
-{{zh-hanzi}}
+{{head|zh|Han character}}
 
 # {{zh-only|傏𠊲}}
 
 ====References====
-* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 67]
+* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 67]
 
 ----
 
@@ -40,4 +44,19 @@
 # {{rfdef|ja|sort=人10}}
 
 ====Readings====
-* {{ja-readings|on=[[とう]] (tō), [[どう]] (dō)|kun=[[おごる]] (ogoru)}}
+{{ja-readings
+|on=とう,どう
+|kun=おごる
+}}
+
+----
+
+==Korean==
+
+===Hanja===
+{{ko-hanja|당돌할|당}}
+
+# {{rfdef|ko|sort=人10}}
+
+===References===
+* [https://hanja.dict.naver.com/hanja?q=傏 Naver Hanja Dictionary: 傏]
