--- a/en/傏/傏.11167.wikitext
+++ b/en/傏/傏.11167.wikitext
@@ -31,7 +31,7 @@
 
 # {{zh-only|傏𠊲}}
 
-====References====
+===References===
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 67]
 
 ----
