--- a/en/m/mandat.1837.wikitext
+++ b/en/m/mandat.1837.wikitext
@@ -46,6 +46,35 @@ Borrowed from {{bor|fr|la|mandātum}}, from {{m|la|mandō||put in one's hands, c
 
 ----
 
+==Indonesian==
+{{wikipedia||lang=id}}
+
+===Etymology===
+From {{bor|id|nl|mandaat}}, from {{der|id|la|[[mandare]]+[[-aat]]}}.
+
+===Pronunciation===
+* {{IPA|id|[ˈmand̪at̚]}}
+* {{hyphenation|id|man|dat}}
+
+===Noun===
+{{id-noun|head=|pl=-}}
+
+# {{l|en|mandate}}
+
+====Derived terms====
+{{der4|id|
+| memandati
+|}}
+
+====Related terms====
+{{rel4|id|
+| mandataris
+|}}
+
+===Further reading===
+* {{R:KBBI Daring}}
+
+----
 ==Ladin==
 
 ===Noun===
