/* Derived terms */ [[sugescent]] kinda sucks...geddit? <suck#62232468>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -117,6 +117,9 @@ From {{inh|en|enm|souken}}, {{m|enm|suken|}}, from {{inh|en|ang|sūcan|t=to suck
 |suck a big one
 }}
 
+====Related terms====
+* {{l|es|sugescent}}
+
 ====Translations====
 {{trans-top|to use the mouth to pull in (liquid etc)}}
 * Albanian: {{t+|sq|thith}}
