--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -156,7 +156,7 @@ From {{inh|fr|fro|-}}, borrowed from {{bor|fr|la|līber||free}}, from {{der|fr|i
 #:: '''Free''' time.
 
 ====Derived terms====
-{{der4|fr|champ libre|libre arbitre|libre-échange|libre-examen|libre-service|licence libre|logiciel libre|papier libre}}
+{{der4|fr|champ libre|discours indirect libre|libre arbitre|libre-échange|libre-examen|libre-service|licence libre|logiciel libre|papier libre}}
 
 ====Descendants====
 * {{desc|bor=1|gsw|liiber}}
