/* Translations */ adding Thai translations <suck#62238132>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -272,6 +272,7 @@ From {{inh|en|enm|souken}}, {{m|enm|suken|}}, from {{inh|en|ang|sūcan|t=to suck
 * Russian: {{t+|ru|отсто́й}} {{qualifier|noun}}
 * Spanish: {{t|es|ser un asco}}, {{t|es|dar asco}}, {{t+|es|apestar}}
 * Swedish: {{t+|sv|suga}}, {{t|sv|vara skit}}, {{t|sv|vara botten}}, {{t|sv|vara värdelös}}
+* Thai: {{t+|th|ห่วย}}, {{t+|th|แย่}}
 * Turkish: {{t+|tr|berbat olmak}}
 {{trans-bottom}}
 
