--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -7,7 +7,7 @@
 * {{rhymes|en|iːp}}
 
 ===Etymology 1===
-From {{inh|en|enm|crepen}}, from {{inh|en|ang|crēopan||to creep, crawl}}, from {{inh|en|gem-pro|*kreupaną||to twist, creep}}, from {{inh|en|ine-pro|*gerb-||to turn, wind}}. Cognate with {{cog|fy|krippe}}, {{m|fy|krûpe}}, {{cog|fy|crjippa||to creep}}, {{cog|nds|krepen}} and {{m|nds|krupen}}, {{cog|nl|kruipen||to creep, crawl}}, {{cog|gmh|kriefen||to creep}}, {{cog|da|krybe||to creep}}, {{cog|no|krype||to creep}}, {{cog|sv|krypa||to creep, crawl}}, {{cog|is|krjúpa||to stoop}}.
+From {{inh|en|enm|crepen}}, from {{inh|en|ang|crēopan||to creep, crawl}}, from {{inh|en|gmw-pro|*kreupan}}, from {{inh|en|gem-pro|*kreupaną||to twist, creep}}, from {{inh|en|ine-pro|*gerb-||to turn, wind}}. Cognate with {{cog|fy|krippe}}, {{m|fy|krûpe}}, {{cog|fy|crjippa||to creep}}, {{cog|nds|krepen}} and {{m|nds|krupen}}, {{cog|nl|kruipen||to creep, crawl}}, {{cog|gmh|kriefen||to creep}}, {{cog|da|krybe||to creep}}, {{cog|no|krype||to creep}}, {{cog|sv|krypa||to creep, crawl}}, {{cog|is|krjúpa||to stoop}}.
 
 ====Verb====
 {{en-verb|creeps|creeping|crept|past2=creeped|past3=crope|past3_qual=obsolete|past_ptc2=creeped|past_ptc3=cropen|past_ptc3_qual=archaic}}
