--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -284,6 +284,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * Luxembourgish: {{t|lb|Promm|f}}, {{t|lb|Praum|f}}
 * Macedonian: {{t|mk|слива|f}}
 * Malagasy: {{t+|mg|pesombazaha}}
+* Malayalam: {{t|ml|പ്ലം}}, {{t|ml|ആലുചാ}}
 * Maltese: {{t|mt|għanbaqar}}
 * Manx: {{t|gv|plumbis|m}}
 * Maori: {{t|mi|paramu}}
