--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -173,8 +173,13 @@ Possibly from {{inh|zh|sit-pro|*d(w)əj||egg; testicle}} ({{zh-ref|Baxter and Sa
 ==Korean==
 
 ===Etymology===
-From {{der|ko|ltc|-}} {{ltc-l|春}}. {{hanja-hunmong|츈|chyun|天文#상01B}}
-
+From {{der|ko|ltc|sort=춘|-}} {{ltc-l|春}}.
+{{hanja-ety
+|dk={{okm-l|츈|chyùn|link=no}}
+|m={{okm-l|츈|chyùn}}
+|mh={{okm-l|봄〮|pwóm}}
+|ml=天文#상01B
+}}
 ===Pronunciation===
 {{ko-hanja-pron|춘}}
 
@@ -182,7 +187,7 @@ From {{der|ko|ltc|-}} {{ltc-l|春}}. {{hanja-hunmong|츈|chyun|天文#상01B}}
 {{ko-hanja-search}}
 {{ko-hanja|봄|춘}}
 
-# {{hanja form of|춘|[[spring]] {{gloss|season}}}}
+# {{hanja form of|춘|[[spring]] {{gloss|season}}|affix}}
 
 ====Compounds====
 {{der-top3|Compounds}}
