--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -21,6 +21,7 @@ From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gmw-pro|*felt}
 # A [[cloth]] or stuff made of [[mat]]ted [[fibre]]s of [[wool]], or wool and [[fur]], [[full]]ed or wrought into a compact substance by rolling and pressure, with lees or size, without spinning or weaving.
 #* {{RQ:Shakespeare Lear|IV|6|passage=It were a delicate stratagem to shoe <br> A troop of horse with '''felt'''.}}
 # A [[hat]] made of felt.
+# A [[felt-tip pen]].
 # {{lb|en|obsolete}} A [[skin]] or [[hide]]; a [[fell]]; a [[pelt]].
 #* {{quote-book|en|year=1707|author=John Mortimer|title=The whole art of husbandry|passage=To know whether sheep are sound or not, see that the '''felt''' be loose.}}
 
