/* Readings */ re-ordered kunyomi to match the official joyo vocab sheet ordering <明#62268845>

--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -118,7 +118,7 @@ Or from {{der|zh|aav}}, cognate with {{och-l|亮|bright}} ({{zh-ref|Schuessler, 
 |goon=みょう<みやう
 |kanon=めい
 |toon=みん
-|kun=あ-かす, あか-らむ, あ-かり, あか-るい, あか-るむ, あき-らか, あ-く, あ-くる, あ-ける
+|kun=あ-かり, あか-るい, あか-るむ, あか-らむ, あき-らか, あ-ける, あ-く, あ-くる, あ-かす
 |nanori=あ, あか, あかり, あかる, あき, あきら, あけ, あける, きよし, くに, さとし, てる, とおる, とし, なお, のり, はじめ, はる, ひろ, み, みつ, よし
 }}
 
