--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -6,6 +6,9 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=67020|canj=AB|ids=⿰日月}}
 
+====Derived characters====
+* {{l|mul|[[盟]], [[萌]], [[朚]], [[奛]], [[奣]]}}
+
 ====References====
 * {{Han ref|kx=0491.120|dkj=13805|dj=0852.180|hdz=21491.080|uh=660E|ud=26126|bh=A9FA|bd=43514}}
 
