--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -89,6 +89,7 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian|t=to float}}, from {{der|e
 * Indonesian: {{t+|id|apung}}
 * Italian: {{t+|it|galleggiare}}
 * Japanese: {{t+|ja|浮かぶ|tr=ukabu}}, {{t+|ja|浮く|tr=uku}}, {{t+|ja|漂う|tr=tadayou}}
+* Kabuverdianu: {{t|kea|boia}}, {{t|kea|boiá}}
 * Khmer: {{t|km|អន្ដែត|tr=on-dait}}
 * Latin: {{t|la|fluitō}}
 * Lithuanian: {{t|lt|plūduriuoti|impf}}, {{t+|lt|plaukti|impf}}
