--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -324,6 +324,7 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian|t=to float}}, from {{der|e
 * Hebrew: {{t+|he|מָצוֹף|m|tr=matsof}}
 * Hungarian: {{t+|hu|úszó}}
 * Japanese: {{t+|ja|浮き|tr=uki}}, {{t|ja|浮揚物|tr=fuyoubutsu}}
+* Kabuverdianu: {{t|kea|bóia}}
 * Khmer: {{t+|km|ប៉ោង}}
 * Lithuanian: {{t|lt|plaustas|m}} {{qualifier|raft}}, {{t|lt|plūdė|f}} {{qualifier|of an angle or a net}}
 {{trans-mid}}
