--- a/en/c/chose.6833.wikitext
+++ b/en/c/chose.6833.wikitext
@@ -120,7 +120,7 @@ From {{inh|frm|fro|chose}}, {{m|fro|cose}}.
 From earlier {{m|fro|cose}}, {{m|fro|cosa}}, inherited from {{inh|fro|la|causa}}. Compare {{m|fro|cause}}.
 
 ===Pronunciation===
-* {{IPA|fro|/ˈtʃɔ.zə/}}<!--would make sense anyway-->
+* {{IPA|fro|[ˈtʃɔ.zə]}}
 
 ===Noun===
 {{fro-noun|f}}
