added cherokee translation <float#62288454>

--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -75,6 +75,7 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian|t=to float}}, from {{der|e
 * Bulgarian: {{t+|bg|плавам}}
 * Burmese: {{t+|my|မျော}}
 * Catalan: {{t+|ca|flotar}}
+* Cherokee: {{t|chr|ᎧᏄᎯ}}
 * Chinese:
 *: Cantonese: {{t+|yue|浮|tr=fau4}}
 *: Mandarin: {{t+|cmn|浮|tr=fú}}
