/* Derived terms */ <bridge#62289701>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -126,6 +126,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |Menai Bridge
 |Mylor Bridge
 |Newby Bridge
+|Newnham Bridge
 |Norton Bridge
 |Pooley Bridge
 |Pye Bridge
