/* Noun */ split sense <pull#62290845>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -323,9 +323,11 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 #: {{ux|en|The spaceship came under the '''pull''' of the gas giant.}}
 #: {{ux|en|iron fillings drawn by the '''pull''' of a magnet}}
 #: {{ux|en|She took a '''pull''' on her cigarette.}}
+# {{lb|en|figurative|by extension}} An advantage over somebody; means of influencing.
+#: {{ux|en|The hypnotist exerted a '''pull''' over his patients.}}
 # Any device meant to be pulled, as a [[lever]], [[knob]], [[handle]], or [[rope]]
 #: {{ux|en|a zipper '''pull'''}}
-# {{lb|en|slang|dated}} Something in one's favour in a comparison or a contest; an advantage; means of influencing.
+# {{lb|en|slang|dated}} Something in one's favour in a comparison or a contest.
 #: {{ux|en|In weights the favourite had the '''pull'''.}}
 # [[appeal|Appeal]] or [[attraction]] (e.g. of a movie star)
 # {{lb|en|Internet|uncountable}} The situation where a [[client]] sends out a request for data from a [[server]], as in ''server pull'', ''pull technology''
