--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -181,7 +181,7 @@ Probably related to etymologies 1 and 2 ({{zh-ref|Xiang, 2019}}). Alternatively,
 ===Etymology 1===
 From {{der|ko|ltc|sort=악|-}} {{ltc-l|惡|id=3}}.
 {{hanja-ety
-|dk={{okm-l|ᅙᅡᆨ〮|qák}}
+|dk={{okm-l|ᅙᅡᆨ〮|qák|link=no}}
 |m={{okm-l|악〮|ák}}
 |mh={{okm-l|[[모디다|모〯딜]]|mwǒtìl}}
 |ml=雜語#하31A
@@ -195,58 +195,58 @@ From {{der|ko|ltc|sort=악|-}} {{ltc-l|惡|id=3}}.
 
 # {{hanja form of|악|[[evil]]; [[wickedness]]|noun}}
 
-====Compounds====
+=====Compounds=====
 {{der-top3|Compounds}}
+* {{ko-l|간악|奸惡}}
+* {{ko-l|강악|強惡}}
+* {{ko-l|괴악|怪惡}}
+* {{ko-l|극악|極惡}}
+* {{ko-l|선악|善惡}}
 * {{ko-l|악감|惡感}}
 * {{ko-l|악과|惡果}}
+* {{ko-l|악귀|惡鬼}}
 * {{ko-l|악기|惡氣}}
-* {{ko-l|악설|惡說/惡舌}}
 * {{ko-l|악녀|惡女}}
-* {{ko-l|악마|惡魔}}
-* {{ko-l|악당|惡黨}}
-* {{ko-l|악인|惡人}}
-* {{ko-l|악화|惡化}}
-* {{ko-l|열악|劣惡}}
-* {{ko-l|선악|善惡}}
-* {{ko-l|악용|惡用}}
-* {{ko-l|악취|惡臭}}
-* {{ko-l|추악|醜惡}}
-* {{ko-l|최악|最惡}}
-* {{ko-l|포악|暴惡}}
 * {{ko-l|악담|惡談}}
-* {{ko-l|흉악|凶惡}}
-* {{ko-l|악습|惡習}}
-* {{ko-l|죄악|罪惡}}
+* {{ko-l|악당|惡黨}}
+* {{ko-l|악덕|惡德}}
+* {{ko-l|악령|惡靈}}
+* {{ko-l|악마|惡魔}}
 * {{ko-l|악몽|惡夢}}
 * {{ko-l|악법|惡法}}
-* {{ko-l|악귀|惡鬼}}
-* {{ko-l|악역|惡役}}
+* {{ko-l|악설|惡舌/惡說}}
 * {{ko-l|악성|惡性}}
-* {{ko-l|행악|行惡}}
-* {{ko-l|악폐|惡弊}}
-* {{ko-l|험악|險惡}}
-* {{ko-l|악덕|惡德}}
-* {{ko-l|악풍|惡風}}
-* {{ko-l|간악|奸惡}}
-* {{ko-l|극악|極惡}}
-* {{ko-l|조악|粗惡}}
-* {{ko-l|해악|害惡}}
 * {{ko-l|악성|惡聲}}
+* {{ko-l|악습|惡習}}
+* {{ko-l|악역|惡役}}
+* {{ko-l|악용|惡用}}
 * {{ko-l|악의|惡意}}
-* {{ko-l|악질|惡質}}
-* {{ko-l|악투|惡投}}
-* {{ko-l|강악|強惡}}
+* {{ko-l|악인|惡人}}
 * {{ko-l|악질|惡疾}}
+* {{ko-l|악질|惡質}}
+* {{ko-l|악취|惡臭}}
+* {{ko-l|악투|惡投}}
+* {{ko-l|악폐|惡弊}}
+* {{ko-l|악풍|惡風}}
+* {{ko-l|악화|惡化}}
+* {{ko-l|열악|劣惡}}
 * {{ko-l|잔악|殘惡}}
+* {{ko-l|조악|粗惡}}
+* {{ko-l|죄악|罪惡}}
 * {{ko-l|참악|慘惡}}
-* {{ko-l|괴악|怪惡}}
-* {{ko-l|악령|惡靈}}
+* {{ko-l|최악|最惡}}
+* {{ko-l|추악|醜惡}}
+* {{ko-l|포악|暴惡}}
+* {{ko-l|해악|害惡}}
+* {{ko-l|행악|行惡}}
+* {{ko-l|험악|險惡}}
+* {{ko-l|흉악|凶惡}}
 {{der-bottom}}
 
 ===Etymology 2===
 From {{der|ko|ltc|sort=오|-}} {{ltc-l|惡|id=2}}. 
 {{hanja-ety
-|dk={{okm-l|ᅙᅩᆼ〮|qwó}}
+|dk={{okm-l|ᅙᅩᆼ〮|qwó|link=no}}
 |m3={{okm-l|오|wo}}<!--去聲-->
 |m3h={{okm-l|[[아쳐ᄒᆞ다|아쳐]]|achye}}
 }}
@@ -258,10 +258,10 @@ From {{der|ko|ltc|sort=오|-}} {{ltc-l|惡|id=2}}.
 
 # {{hanja form of|오|to [[hate]]|affix}}
 
-====Compounds====
+=====Compounds=====
 {{der-top3|Compounds}}
-* {{ko-l|증오|憎惡}}
 * {{ko-l|오한|惡寒}}
+* {{ko-l|증오|憎惡}}
 * {{ko-l|혐오|嫌惡}}
 {{der-bottom}}
 
