--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -385,7 +385,7 @@ See combined section below.
 * Slovak: {{t|sk|chytať|impf}}, {{t|sk|chytiť|pf}}, {{t|sk|lapať|impf}}, {{t|sk|lapiť|pf}}
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|łojś|impf}}
-* Spanish: {{t+|es|capturar}}, {{t+|es|agarrar}}, {{t+|es|atrapar}}
+* Spanish: {{t+|es|capturar}}, {{t+|es|agarrar}}, {{t+|es|atrapar}}, {{t+|es|pillar}}
 * Swedish: {{t+|sv|fånga}}
 * Tajik: {{t|tg|капидан}}
 * Turkish: {{t+|tr|kapmak}}
