/* Synonyms */ <New Zealand#62308662>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -32,6 +32,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}} ({{m|nl|nieuw}} calqued 
 * {{l|en|Land of the Long White Cloud}} {{qualifier|Maori name translated into English}}
 * {{l|en|Maoriland}}
 * {{l|en|NZ}} {{qualifier|abbreviation}}
+* {{l|en|Zealandica}}
 
 ====Holonyms====
 * {{l|en|Polynesia}}
