t+fr:[[prune]] ([[WT:EDIT|Assisted]]) <plum#62311022>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -488,6 +488,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * Danish: {{t|da|blommefarvet}}
 * Dutch: {{t+|nl|donkerrood}}, {{t+|nl|donkerrode}}
 * Finnish: {{t|fi|luumunpunainen}}
+* French: {{t+|fr|prune}}
 * Ido: {{t|io|prunea}}
 {{trans-mid}}
 * Irish: {{t|ga|plumachorcra}}
