/* Japanese */ ja-readings formatting <偒#62316743>

--- a/en/偒/偒.11106.wikitext
+++ b/en/偒/偒.11106.wikitext
@@ -44,7 +44,7 @@
 # {{rfdef|ja|sort=人09}}
 
 ====Readings====
-* {{ja-readings|on=[[とう]] (tō)|kun=[[まつすぐ]] (matsusugu)}}
+* {{ja-readings|on=とう|kun=まつす-ぐ}}
 
 ----
 
