--- a/en/偂/偂.11088.wikitext
+++ b/en/偂/偂.11088.wikitext
@@ -22,4 +22,4 @@
 # {{rfdef|ja|sort=人09}}
 
 ====Readings====
-* {{ja-readings|on=[[せん]] (sen)|kun=[[すすむ]] (susumu)}}
+* {{ja-readings|on=せん|kun=すす-む}}
