--- a/en/偆/偆.11093.wikitext
+++ b/en/偆/偆.11093.wikitext
@@ -43,7 +43,7 @@
 # {{rfdef|ja|sort=人09}}
 
 ====Readings====
-* {{ja-readings|on=[[しゅん]] (shun)|kun=[[あつい]] (atsui), [[うごめく]] (ugomeku)}}
+* {{ja-readings|on=しゅん,ちゅん|kun=あつ-い, うごめ-く, と-む}}
 
 ----
 
