--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -104,6 +104,7 @@ From {{der|en|ur|پاجامہ|tr=pājāma}}/{{der|en|hi|पैजामा}}, fr
 * Ukrainian: {{t|uk|піжа́ма|f|sc=Cyrl}}
 * Urdu: {{t|ur|پاجاما|tr=pājāmā|sc=ur-Arab}}, {{t|ur|پایجامه|tr=pāyjāmā|sc=ur-Arab}}
 * Uzbek: {{t+|uz|pijama}}
+* Vietnamese: {{t|vi|đồ ngủ}}, {{t+|vi|pijama}}
 * Welsh: {{t|cy|pyjamas|m}}, {{t|cy|pajamas}}
 * Yiddish: {{t|yi|פּיזשאַמעס|f}}
 {{trans-bottom}}
