--- a/en/愔/愔.15656.wikitext
+++ b/en/愔/愔.15656.wikitext
@@ -43,7 +43,7 @@
 # {{rfdef|ja|sort=心09}}
 
 ====Readings====
-* {{ja-readings|on=[[いん]] (in), [[あん]] (an), [[おん]] (on)|kun=[[やわらぐ]] (yawaragu)}}
+* {{ja-readings|on=いん, あん, おん|kun=やわ-らぐ}}
 
 ----
 
