--- a/en/愖/愖.15658.wikitext
+++ b/en/愖/愖.15658.wikitext
@@ -50,4 +50,4 @@
 # {{rfdef|ja|sort=心09}}
 
 ====Readings====
-* {{ja-readings|on=しん, じん, たん, とん)|kun=まこと, たの-しむ}}
+* {{ja-readings|on=しん, じん, たん, とん|kun=まこと, たの-しむ}}
