--- a/en/愗/愗.15659.wikitext
+++ b/en/愗/愗.15659.wikitext
@@ -43,4 +43,4 @@
 # {{rfdef|ja|sort=心09}}
 
 ====Readings====
-* {{ja-readings|on=[[ぼう]] (bō), [[も]] (mo)|kun=[[おろか]] (oroka), [[やぶさか]] (yabusaka)}}
+* {{ja-readings|on=ぼう, も|kun=おろ-か, やぶさか}}
