--- a/en/愬/愬.15679.wikitext
+++ b/en/愬/愬.15679.wikitext
@@ -60,7 +60,7 @@
 # {{rfdef|ja|sort=心10}}
 
 ====Readings====
-* {{ja-readings|on=[[そ]] (so), [[さく]] (saku)|kun=[[うったえる]] (uttaeru)}}
+* {{ja-readings|on=そ, さく|kun=うった-える}}
 
 ----
 
