/* Derived terms */ <chose#62326623>

--- a/en/c/chose.6833.wikitext
+++ b/en/c/chose.6833.wikitext
@@ -68,6 +68,7 @@ From {{inh|fr|fro|chose}}, from {{inh|fr|la|causa}}. Compare {{cog|it|cosa}}, {{
 ====Derived terms====
 * {{l|fr|chosisme}}
 * {{l|fr|chosiste}}
+* {{l|fr|prendre les chose comme elles viennent}}
 
 ===Further reading===
 * {{R:TLFi}}
