--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -234,6 +234,7 @@ From {{der|en|la|curvus|t=bent, curved}}. {{doublet|en|curb}}.
 * Dutch: {{t+|nl|krommen}}, {{qualifier|pipe}} {{t+|nl|plooien}}, {{t+|nl|buigen}}
 * Finnish: {{t+|fi|käyristää}}
 * French: {{t+|fr|courber}}
+* Galician: {{t|gl|curvar}}
 * Georgian: {{t|ka|ღუნვა}}
 * German: {{t+|de|biegen}}, {{t+|de|verbiegen}}
 * Hindi: {{t+|hi|मोड़ना}}
