--- a/en/慃/慃.15702.wikitext
+++ b/en/慃/慃.15702.wikitext
@@ -4,7 +4,7 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=PCIM|ids=⿰忄翁}}
 
-====References====
+===Further reading===
 {{Han ref|kx=0397.190|dkj=11041|dj=0736.120|hdz=42338.060|uh=6143}}
 
 ----
@@ -14,11 +14,12 @@
 
 ===Glyph origin===
 {{Han etym}}
+{{Han compound|忄|翁|c1=s|c2=p|ls=psc|t1=heart}}.
 
 ===Pronunciation===
 {{zh-pron
 |m=yǎng
-|c=ong2,ngong2
+|c=ong2
 |mc=y
 |oc=y
 |ma=
@@ -26,18 +27,33 @@
 }}
 
 ===Definitions===
-{{zh-hanzi}}
+{{head|zh|Han character}}
 
 # {{zh-only|慃𢞡|[[perverse]] (behavior); [[disagreeable]] (character)}}
 
 ====References====
-* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
+* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List, p. 109]
+
+----
+
+==Korean==
+
+===Hanja===
+{{ko-hanja|어그러지다|어그러질|앙}}
+
+# {{rfdef|ko|sort=心10}}
+
+===References===
+* [https://hanja.dict.naver.com/hanja?q=慃 Naver Hanja Dictionary: 慃]
 
 ----
 
 ==Vietnamese==
 
 ===Han character===
-{{vi-readings|rs=心10|reading=õng}}
+{{vi-readings|nom=õng|rs=心10}}
 
 # {{rfdef|vi|sort=心10}}
+
+===References===
+* [http://nomfoundation.org/common/nom_details.php?codepoint=6143 Nom Foundation]
