--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -92,7 +92,7 @@ From {{inh|en|enm|France}}, borrowed from {{der|en|frm|France}}, from {{der|en|f
 * American Sign Language: {{t|ase|F@NearForehead-HandPalmDown F@NearForehead-HandPalmUp HorizSmallTwist}}
 * Amharic: {{t|am|ፈረንሣይ}}
 * Antillean Creole: {{t|gcf|Frans|f}}
-*: Martinican: {{t|gcf|Fwans|f}}
+*: Martinican Creole: {{t|mqc|Fwans|f}}
 * Arabic: {{t+|ar|فَرَنْسَا|f}}, {{t|ar|فَرَنْسَة|f}}, {{t|ar|الْإِفْرَنْج|f}} {{qualifier|archaic}}, {{t|ar|الْفِرِنْجَة|f}} {{qualifier|archaic}}
 * Aragonese: {{t|an|Franzia|f}}
 * Armenian: {{t+|hy|Ֆրանսիա}}
