--- a/en/p/Pythonesque.2111.wikitext
+++ b/en/p/Pythonesque.2111.wikitext
@@ -1,6 +1,7 @@
 ==English==
 
-
+===Pronunciation===
+* {{audio|en|en-uk-Pythonesque.ogg|Audio (UK)}}
 
 ===Etymology 1===
 From the name of the British comedy troupe [[Monty Python]], referring to their signature type of humour.
