--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -76,6 +76,7 @@
 * Chuvash: {{t|cv|Америкӑри Пӗрлешӳллӗ Штатсем}}
 * Coptic: {{t|cop|ⲣⲉⲑⲱⲟⲩ ⲉⲧⲧⲟⲙⲓ `ⲛⲧⲉ ⲁⲙⲉⲣⲓⲕⲏ}}
 * Cornish: {{t|kw|Statys Unys Amerika }}
+* Corsican: {{t+|co|Stati Uniti d'America|m-p}}, {{t+|co|Stati Uniti|m-p}}, {{t+|co|SUA|m-p}}
 * Crimean Tatar: {{t|crh|Amerika Qoşma Ştatları|p}}
 * Czech: {{t+|cs|Spojené státy americké|m-p}}, {{t+|cs|Spojené státy|m-p}}, {{t+|cs|Amerika|f}}
 * Danish: {{t|da|Amerikas Forenede Stater}}, {{t|da|Forenede Stater}}, {{t+|da|Amerika}}
@@ -211,7 +212,7 @@
 * Volapük: {{t+|vo|Lamerikän}}, {{t|vo|Tats-Pebalöl Nolüda-Meropa}}, {{t|vo|Tats-Pebalöl Meropa}}, {{t+|vo|Tats-Pebalöl}}, {{t|vo|TPM}}
 * Võro: {{t|vro|Ameeriga Ütisriigiq}}
 * Welsh: {{t+|cy|Unol Daleithiau America}}
-* West Frisian: {{t+|fy|Feriene Steaten fan Amearika}}, {{t|fy|Feriene Steaten fan Amerika|n-p}}
+* West Frisian: {{t+|fy|Feriene Steaten fan Amearika|n-p}}, {{t|fy|Feriene Steaten fan Amerika|n-p}}
 * Yakut: {{t|sah|Америка Холбоһуктаах Штаттара}}
 * Yiddish: {{t|yi|פֿאַראייניקטע שטאַטן|p}}, {{t|yi|פֿאַראייניקטע שטאַטן פֿון אַמעריקע|p}}, {{t|yi|אַמעריקע}}
 * Yoruba: {{t|yo|Etikun Fagini ti Amẹrika}}
