--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -546,6 +546,9 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 
 ==Portuguese==
 
+===Etymology===
+From {{bor|pt|en|straight}}.
+
 ===Noun===
 {{pt-noun|m|s}}
 
