[[wikt:User:Suzukaze-c/AjaxEdit.js|Æ]] /* 2.2 Pronunciation */ <做#62385763>

--- a/en/做/做.11114.wikitext
+++ b/en/做/做.11114.wikitext
@@ -28,7 +28,7 @@ Colloquial form of the departing-tone variant of {{ltc-l|作|to do|id=2}}, to di
 |c=zou6
 |c-t=
 |g=zu4
-|h=pfs=cho
+|h=pfs=cho,gd=zo4
 |j=zueh4
 |md=có̤
 |mda=Cdo-fzho 做.ogg
