--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -313,6 +313,7 @@ From {{der|ko|ltc|sort=지|-}} {{ltc-l|地}}.
 * {{ko-l|지하|地下}}
 * {{ko-l|지협|地峽}}
 * {{ko-l|지형|地形}}
+* {{ko-l|객지|客地|[[foreign]] [[land]]}}
 * {{ko-l|고지|高地}}
 * {{ko-l|궁지|窮地}}
 * {{ko-l|기지|基地}}
