--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -52,7 +52,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Indonesian: {{t+|id|pirang}}
 * Irish: {{t|ga|fionn}}
 {{trans-mid}}
-* Japanese: {{t|ja|[[金髪]]の|tr=きんぱつの, kinpatsu-no}}
+* Japanese: {{t|ja|[[金髪]]の|tr=きんぱつの, kinpatsu no}}
 * Korean: {{t+|ko|금발|alt=금발의}} ({{t|ko|[[金髮]]-}})
 * Latin: {{t+|la|flāvus|m}}
 * Latvian: {{t|lv|blonds}}
