--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -71,7 +71,7 @@ From {{com|en|united|kingdom}}, first attested from 1706.
 * Hungarian: {{t+|hu|Egyesült Királyság}}, {{t+|hu|Nagy-Britannia és Észak-Írország Egyesült Királysága}}
 * Icelandic: {{t|is|Hið sameinaða konungsríki|n}}
 * Ido: {{t+|io|Unionita Rejio}}
-* Indonesian: {{t|id|Kerajaan Bersatu}} ''(note: it is more often to be referred as Britania Raya "Great Britain" than Kerajaan Bersatu)''
+* Indonesian: {{t|id|Kerajaan Bersatu}} ''(note: it is more often to be referred as Britania Raya "Great Britain" than Kerajaan Bersatu)'', {{t+|id|Britania Raya}}, {{t|id|Inggris Raya}}, {{t+|id|Inggris}}
 * Interlingua: {{t|ia|Regno Unite}}
 * Irish: {{t|ga|Ríocht Aontaithe|alt=An Ríocht Aontaithe|f}}
 * Italian: {{t+|it|Regno Unito|m}}, {{t+|it|Regno Unito di Gran Bretagna e Irlanda del Nord|m}}
