/* Derived terms */ <skirt#62391839>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -48,21 +48,53 @@ From {{inh|en|enm|skyrte}}, from {{der|en|non|skyrta}}, from {{der|en|gem-pro|*s
 * {{sense|article of clothing}} It was formerly common to speak of “skirts” (plural) rather than “a skirt”. In some cases this served to emphasize an array of skirts of underskirts, or of pleats and folds in a single skirt; in other cases it made little or no difference in meaning.
 
 ====Derived terms====
-{{rel-top3|Terms derived from ''skirt''}}
-* {{l|en|fender skirt}}
-* {{l|en|hobble skirt}}
-* {{l|en|mermaid skirt}}
-* {{l|en|miniskirt}}
-{{rel-mid3}}
-* {{l|en|pencil skirt}}
-* {{l|en|prairie skirt}}
-* {{l|en|rah-rah skirt}}
-* {{l|en|skirt chaser}}
-{{rel-mid3}}
-* {{l|en|skirted}}
-* {{l|en|skirtless}}
-* {{l|en|unskirted}}
-{{rel-bottom}}
+{{der3|en
+|apron skirt
+|bedskirt
+|beskirt
+|bit of skirt
+|circle skirt
+|cling to the skirts of
+|divided skirt
+|fender skirt
+|fishtail skirt
+|flippy skirt
+|foreskirt
+|grass skirt
+|hobble skirt
+|hoop skirt
+|lightskirt
+|maxiskirt
+|mermaid skirt
+|microskirt
+|midiskirt
+|miniskirt
+|outskirts
+|overskirt
+|pelmet skirt
+|pencil skirt
+|pettiskirt
+|poodle skirt
+|prairie skirt
+|pro skirt
+|puffball skirt
+|rah-rah skirt
+|red ring skirt
+|skirt chaser
+|skirt dance
+|skirted
+|skirt flashing
+|skirtini
+|skirtless
+|skirtlike
+|skirts and kidneys
+|skirt steak
+|skirty
+|sprayskirt
+|underskirt
+|unskirted
+|upskirt
+}}
 
 ====Descendants====
 * {{desc|ja|スカート|tr=sukāto|bor=1}}
