/* Related terms */ --> Derived terms <skirt#62391841>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -334,9 +334,14 @@ From {{inh|en|enm|skyrte}}, from {{der|en|non|skyrta}}, from {{der|en|gem-pro|*s
 # To avoid or ignore (something); to manage to avoid (something or a problem); to [[skate by]] (something).
 #: {{ux|en|He '''skirted''' the issue of which parties to attend by staying at home instead.}}
 
-====Related terms====
-* {{l|en|skirting-board}}
-* {{l|en|outskirt}}
+====Derived terms====
+{{der3|en
+|skirt around
+|skirter
+|skirting-board
+|sunskirter
+|unskirted
+}}
 
 ====Translations====
 {{trans-top|to be on or from the border of}}
