--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -36,8 +36,7 @@ From {{inh|en|enm|substance}}, from {{der|en|fro|substance}}, from {{der|en|la|s
 #* {{RQ:KJV|Luke|15|13}}
 #*: And there wasted his '''substance''' with riotous living.
 #* {{RQ:Shakespeare Comedy of Errors|act=I|scene=i|passage=Thy '''substance''', valued at the highest rate, / Cannot amount unto a hundred marks.}}
-#* {{RQ:Swift The Conduct of the Allies, and of the late Ministry, in beginning and carrying on the present War}}
-#*: We are destroying many thousand lives, and exhausting our '''substance''', but not for our own interest.
+#* {{RQ:Swift Conduct of the Allies|page=26|passage=And as we have waſted our Strength and vital '''Subſtance''' in this profuſe manner, ſo we have ſhamefully miſapplied it to Ends at leaſt very different from thoſe for which we undertook the War, and often to effect others which after a Peace we may ſeverely repent.}}
 # A form of matter that has constant chemical composition and characteristic properties.
 # [[drug|Drugs]] {{gloss|illegal narcotics}}
 #: {{ux|en|'''substance''' abuse}}
