Replacing with plain links (semi-automated) <France#62405966>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -276,7 +276,7 @@ From {{inh|en|enm|France}}, borrowed from {{der|en|frm|France}}, from {{der|en|f
 {{trans-bottom}}
 
 ===See also===
-* {{l|en|Appendix:Place names in France}}
+* [[Appendix:Place names in France]]
 * {{list:countries of Europe/en}}{{topics|en|Countries in Europe}}
 
 ===References===
