--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -257,8 +257,8 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 {{trans-bottom}}
 
 ====See also====
-* {{l|en|Appendix:Place names in Israel}}
-* {{l|en|Appendix:Countries of the world}}
+* [[Appendix:Place names in Israel]]
+* [[Appendix:Countries of the world]]
 * {{list:countries of Asia/en}}{{topics|en|Countries in Asia}}
 * {{l|en|Irving}} {{qualifier|surname used to anglicize ''Israel''}}
 * {{l|en|Zion}}, {{l|en|Judea}}
