Replacing with plain links (semi-automated) <United Kingdom#62406002>

--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -153,8 +153,8 @@ From {{com|en|united|kingdom}}, first attested from 1706.
 {{trans-bottom}}
 
 ===See also===
-* {{l|en|Appendix:Place names in the United Kingdom}}
+* [[Appendix:Place names in the United Kingdom]]
 * {{list:countries of Europe/en}}{{topics|en|Countries in Europe}}
-* {{l|en|Appendix:Countries of the world|Countries of the world}}
+* [[Appendix:Countries of the world|Countries of the world]]
 
 [[Category:en:United Kingdom]]
