Replacing with plain links (semi-automated) <United States of America#62406004>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -222,8 +222,8 @@
 ===See also===
 * {{l|en|U.S. American}}, {{l|en|United Statesian}}, {{l|en|United Statesman}}
 
-* {{l|en|Appendix:Countries of the world}}
-* {{l|en|Appendix:Place names in the United States}}
+* [[Appendix:Countries of the world]]
+* [[Appendix:Place names in the United States]]
 
 ===Further reading===
 * {{projectlink|wikipedia|United States|United States of America}}
