--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -159,8 +159,8 @@
 {{trans-bottom}}
 
 ====See also====
-* {{l|en|Appendix:Place names in the Czech Republic}}
+* [[Appendix:Place names in the Czech Republic]]
 * {{list:countries of Europe/en}}
-* {{l|en|Appendix:Countries of the world}}
+* [[Appendix:Countries of the world]]
 
 [[Category:en:Czech Republic]]
