--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -522,7 +522,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * {{l|en|sloe}}
 * {{l|en|umeboshi}}
 * {{l|en|umesu}}
-* {{l|en|Appendix:Colors}}
+* [[Appendix:Colors]]
 {{bottom}}
 
 ===Etymology 2===
