Replacing with plain links (semi-automated) <Yugoslavia#62406340>

--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -100,7 +100,7 @@ Borrowed from {{bor|en|sh|Jugoslavija}}, in turn from {{m|sh|jug||south}} and {{
 {{trans-bottom}}
 
 ===See also===
-* {{l|en|Appendix:Countries of the world}}
+* [[Appendix:Countries of the world]]
 
 [[Category:English words suffixed with -ia]]
 [[Category:en:Countries in Europe]]
