Replacing with plain links (semi-automated) <saffron#62406371>

--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -367,7 +367,7 @@ From {{inh|en|enm|saffron}}, from {{der|en|fro|safran}}, from {{der|en|ML.|safrÄ
 * {{l|en|crocus bag}}
 * {{l|en|crocus sack}}
 * {{l|en|turmeric}}
-* {{l|en|Appendix:Colors}}
+* [[Appendix:Colors]]
 
 ===Further reading===
 * {{pedia|i=1|Crocus sativus}}
