/* Declension */ not sure. Rh. W. only mentions accusative use with "hör" <ich#62420046>

--- a/en/i/ich.12974.wikitext
+++ b/en/i/ich.12974.wikitext
@@ -133,7 +133,7 @@ Ripuarian (''regional forms'': Aachen [A], Cologne [C]; ''reduced or unstressed 
 | '''{{l|gmw-cfr|us}}''', {{l|gmw-cfr|uns}} <br> {{l|gmw-cfr|os}}, {{l|gmw-cfr|ons}} [A] || '''{{l|gmw-cfr|üch}}''' || colspan="3" |  '''{{l|gmw-cfr|inne}}''' <br> {{l|gmw-cfr|hön}}, {{l|gmw-cfr|hönne}} [A] (or = ''nom.'') <br> {{l|gmw-cfr|en}} (''red.'')
 |-
 ! Accusative
-| = ''dat.'' || = ''dat.'' || colspan="3" | = ''nom.'' <br> [A] = ''nom.'' or ''dat.''
+| = ''dat.'' || = ''dat.'' || colspan="3" | = ''nom.''
 |}
 
 ----
