--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -22,9 +22,7 @@ Cognate with {{cog|fy|sprekke}}, {{cog|nds|spreken|t=to speak}}, {{cog|nl|spreke
 {{en-verb|speaks|speaking|spoke|past2=spake|past2_qual=archaic|spoken|past_ptc2=spoke|past_ptc2_qual=colloquial, nonstandard}}
 
 # {{lb|en|intransitive}} To [[communicate]] with one's [[voice]], to [[say]] [[word]]s [[out loud]].
-#* {{quote-book|en|year=1918|author={{w|W. B. Maxwell}}|chapter=25
-|title=[http://openlibrary.org/works/OL1097634W The Mirror and the Lamp]
-|page=203|pageurl=https://archive.org/details/mirrorlamp00maxwiala/page/203/mode/1up|passage=And Vickers launched forth into a tirade very different from his platform utterances. He '''spoke''' with extreme contempt of the dense stupidity exhibited on all occasions by the working classes. He said that if you wanted to do anything for them, you must rule them, not pamper them.}}
+#* {{RQ:Maxwell Mirror and the Lamp|chapter=XXV|page=203|passage=And Vickers launched forth into a tirade very different from his platform utterances. He '''spoke''' with extreme contempt of the dense stupidity exhibited on all occasions by the working classes. He said that if you wanted to do anything for them, you must rule them, not pamper them.}}
 #: {{ux|en|I was so surprised I couldn't '''speak'''.}}
 #: {{ux|en|You're '''speaking''' too fast.}}
 # {{lb|en|intransitive|reciprocal}} To have a [[conversation]].
