--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -1,4 +1,5 @@
 {{also|france|Francë}}
+
 ==English==
 {{wikipedia|lang=en|dab=France (disambiguation)|France}}
 {{swp|lang=en}}
@@ -335,10 +336,22 @@ From {{inh|fr|frm|France}}, from {{inh|fr|fro|France}}, from {{inh|fr|ML.|-}} or
 {{bottom}}
 
 ===Anagrams===
-* {{l|fr|Céfran}}
+* {{anagrams|fr|Céfran}}
 
 [[Category:fr:Countries in Europe]]
 [[Category:fr:France]]
+
+----
+
+==Friulian==
+
+===Proper noun===
+{{head|fur|proper noun|g=f}}
+
+# {{l|en|France}}
+
+====Related terms====
+* {{l|fur|francês}}
 
 ----
 
