--- a/en/偷/偷.11143.wikitext
+++ b/en/偷/偷.11143.wikitext
@@ -42,7 +42,7 @@
 
 # to [[steal]]; to [[snatch]]
 #: {{zh-x|我們 的 錢 被 偷 了。|We had our money '''stolen'''.}}
-#* {{zh-x|扒手 偷 了 她 的 皮 夾子 跑 了。|The pickpocket '''pinched''' her purse and ran away.}}
+#: {{zh-x|扒手 偷 了 她 的 皮 夾子 跑 了。|The pickpocket '''pinched''' her purse and ran away.}}
 # [[stealthily]]; [[secretly]]; [[covertly]]
 #: {{zh-x|偷看|to peek; to peep}}
 #: {{zh-x|偷聽|to eavesdrop}}
