--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -27,7 +27,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 #: {{ux|en|The skater performed a '''beautiful''' [[axel]].}}
 
 ====Usage notes====
-* The term carries a distinctly feminine aspect and is normally not applied to men (in which case {{m|en|handsome}} is more appropriate and {{m|en|de rigueur}}).
+* The term may be seen as having a feminine aspect and is less frequently applied to men, with {{m|en|handsome}} being more common and unmarked. 
 * The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the superlatives '''[[beautifulest]]''' and '''[[beautifullest]]''' have also occasionally been used, but are nonstandard.
 
 ====Synonyms====
