--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -37,6 +37,7 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, from {{der|en|ar|سَمْ
 #* {{quote-book|en|page=173|year=1900|author=William Beckford| title=The History of the Caliph Vathek| url=http://books.google.com/books?id=KnArAAAAMAAJ| passage="There for a while I enjoyed myself in the '''zenith''' of glory and pleasure."}}
 
 ====Derived terms====
+* {{l|en|antizenith}}
 * {{l|en|zenithal}}
 * {{l|en|zenithally}}
 * {{l|en|zenithic}}
