--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -46,6 +46,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Esperanto: {{t+|eo|blonda}}
 * Finnish: {{t+|fi|vaalea}}
 * French: {{t+|fr|blond|m}}
+* Galician: {{t+|gl|fouvo|m}}, {{t+|gl|fouveiro|m}}
 * German: {{t+|de|blond}}, {{t+|de|hell}}
 * Greek: {{t+|el|ξανθός}}
 * Ido: {{t+|io|blonda}}
