--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -155,7 +155,7 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 * Volapük: {{t-needed|vo}}
 * Walloon: {{t+|wa|gordene|f}}
 * Welsh: {{t|cy|llen|f}}, {{t|cy|llenni|f-p}}
-* Yiddish: {{t|yi|פֿאָרהאַנג|m|sc=Hebr}}
+* Yiddish: {{t|yi|פֿירהאַנג|m}}
 {{trans-bottom}}
 
 {{trans-top|piece of cloth in a theater}}
