/* Noun */  updated regional specificity <tortoise#62459172>

--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -14,7 +14,7 @@ From {{inh|en|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, from {{der|en
 ===Noun===
 {{en-noun}}
 
-# Any of various land-dwelling [[reptile]]s, of the [[family]] [[Testudinidae]] {{lb|en|chiefly|North America}} or the order [[Testudines]] {{lb|en|chiefly|UK}}, whose body is enclosed in a [[shell]] ([[carapace]] plus [[plastron]]). The animal can [[withdraw]] its head and four legs partially into the shell, providing some [[protection]] from [[predator]]s.
+# Any of various land-dwelling [[reptile]]s, of the [[family]] [[Testudinidae]] {{lb|en|chiefly|North America}} or the order [[Testudines]] {{lb|en|chiefly|UK|Australia|New Zealand|Ireland|South Africa|India}}, whose body is enclosed in a [[shell]] ([[carapace]] plus [[plastron]]). The animal can [[withdraw]] its head and four legs partially into the shell, providing some [[protection]] from [[predator]]s.
 #: {{syn|en|shellpad|q=obsolete}}
 
 ====Usage notes====
