t+pl:[[przekładać]] t+pl:[[przełożyć]] ([[WT:EDIT|Assisted]]) <cut#62464529>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -513,6 +513,7 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 * Icelandic: {{t+|is|skipta}}, {{t+|is|skera}}, {{t+|is|draga}}
 * Italian: {{t+|it|alzare}}
 * Maori: {{t|mi|katikati}}, {{t|mi|wāwāhi}}
+* Polish: {{t+|pl|przekładać|impf}}, {{t+|pl|przełożyć|pf}}
 * Portuguese: {{t+|pt|cortar}}
 * Spanish: {{t+|es|cortar}}
 * Swedish: {{t+|sv|kupera}}
