--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -258,6 +258,7 @@ The noun is derived from the verb.
 * German: {{t+|de|Knilch|m}}, {{t|de|Widerling|m}}
 {{trans-mid}}
 * Italian: {{t+|it|antipatico|m}}, {{t+|it|ruffiano}}, {{t+|it|lecchino}}
+* Russian: {{t+|ru|хмырь|m}}
 * Spanish: {{t+|es|desgraciado|m}}
 * Swedish: {{t+|sv|miffo|n}}, {{t+|sv|äckel|n}}, {{t|sv|äckelpotta|c}}
 {{trans-bottom}}
