--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -38,6 +38,7 @@ From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gmw-pro|*felt}
 *: Egyptian Arabic: {{t|arz|لبد|m|tr=libd}}
 * Armenian: {{t+|hy|թաղիք}}
 * Asturian: {{t|ast|fieltru|m}}
+* Azerbaijani: {{t|az|keçə}}
 * Bashkir: {{t|ba|кейеҙ}}
 * Basque: {{t-needed|eu}}
 * Bulgarian: {{t|bg|филц|m}}
@@ -68,8 +69,8 @@ From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gmw-pro|*felt}
 * Kazakh: {{t|kk|киіз}}
 * Khakas: {{t|kjh|киис}}
 * Khinalug: {{t|kjj|ттагьла}}
-* Khmer: {{t+|km|សំបុក}}
 {{trans-mid}}
+* Khmer: {{t+|km|សំបុក}}
 * Korean: {{t|ko|펠트}}
 * Kumyk: {{t|kum|кийиз|tr=}}
 * Kyrgyz: {{t|ky|кийиз}}
