--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -98,7 +98,7 @@ From the {{inh|af|nl|-}} 3rd person singular of {{m|nl|hebben}}, which is {{m|nl
 ===Pronunciation===
 * {{a|BE}} {{IPA|nl|/(ɦ)ət/}}
 * {{audio|nl|Nl-het (Belgium).ogg|audio (Belgium)}}
-* {{a|NL}} {{IPA|nl|/(ɦ)ət/|qual1=usually|/ɦɛt/|qual2=when stressed}}
+* {{a|NL}} {{IPA|nl|/(ɦ)ət/|qual1=unstressed|/ɦɛt/|qual2=when stressed}}
 * {{audio|nl|Nl-het.ogg|audio (Netherlands)}}
 * {{hyphenation|nl|het}}
 * {{rhymes|nl|ət|ɛt}}
