--- a/en/傃/傃.11155.wikitext
+++ b/en/傃/傃.11155.wikitext
@@ -49,7 +49,7 @@
 # {{rfdef|ja|sort=人10}}
 
 ====Readings====
-* {{ja-readings|on=[[そ]] (so)|kun=[[むかう]] (mukau), [[まもる]] (mamoru)}}
+* {{ja-readings|on=そ|kun=む-かう, まも-る}}
 
 ----
 
