--- a/en/昌/昌.16948.wikitext
+++ b/en/昌/昌.16948.wikitext
@@ -6,7 +6,7 @@
 {{Han char|rn=72|rad=日|as=04|sn=8|four=60600|canj=AA|ids=⿱日曰}}
 
 ====Derived characters====
-* {{l|mul|[[倡]], [[唱]], [[猖]], [[淐]], [[娼]], [[琩]], [[椙]], [[晿]], [[焻]], [[錩]]}}
+* {{l|mul|[[倡]], [[唱]], [[猖]], [[淐]], [[娼]], [[琩]], [[椙]], [[晿]], [[焻]], [[錩]], [[閶]]}}
 
 ====References====
 * {{Han ref|kx=0491.100|dkj=13803|dj=0852.160|hdz=21490.030|uh=660C|ud=26124|bh=A9F7|bd=43511}}
