--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -382,7 +382,7 @@ From {{inh|en|enm|counte}}, from {{der|en|xno|conte}} and {{der|en|fro|comte||co
 * Icelandic: {{t+|is|greifi|m}}
 * Ido: {{t+|io|komto}}
 * Irish: {{t|ga|cunta|m}}, {{t|ga|cuntaí|m-p}}
-* Italian: {{t+|it|conte}}
+* Italian: {{t+|it|conte|m}}
 * Japanese: {{t+|ja|伯爵|tr=はくしゃく, hakushaku}}
 {{trans-mid}}
 * Khmer: {{t+|km|ព្រះ|tr=preah}}
