--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -123,7 +123,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Finnish: {{t+|fi|löytää}}
 * French: {{t+|fr|trouver}}
 * Friulian: {{t|fur|cjatâ}}, {{t|fur|čhatâ}}
-* Galician: {{t+|gl|atopar}}, {{t+|gl|topar}}, {{t+|gl|deparar}}, {{t+|gl|achar}}
+* Galician: {{t+|gl|atopar}}, {{t+|gl|topar}}, {{t+|gl|deparar}}, {{t+|gl|achar}}, {{t+|gl|encontrar}}
 * Georgian: {{t|ka|მიგნება}}, {{t|ka|პოვნა}}
 * German: {{t+|de|finden}}
 *: Alemannic German: {{t|gsw|aaträffe}}
