exist as well <ich#62510366>

--- a/en/i/ich.12974.wikitext
+++ b/en/i/ich.12974.wikitext
@@ -116,25 +116,27 @@ Ripuarian (''regional forms'': Aachen [A], Cologne [C]; ''reduced or unstressed 
 ! Masculine !! Feminine !! Neuter
 |-
 ! Nominative
-| '''{{l|gmw-cfr|ich}}''' || '''{{l|gmw-cfr|du}}''' <br>{{l|gmw-cfr|do}} [C] <br> {{l|gmw-cfr|de}} (''red.'') || '''{{l|gmw-cfr|hä}}''' <br> {{l|gmw-cfr|e}} (''red.'') || '''{{l|gmw-cfr|sei}}''', {{l|gmw-cfr|sie}} <br> {{l|gmw-cfr|se}} (''red.'') || '''{{l|gmw-cfr|it}}''' <br> {{l|gmw-cfr|het}} [A] <br> {{l|gmw-cfr|et}}, {{l|gmw-cfr|'t}} (''red.'')
+| '''{{l|gmw-cfr|ich}}''' || '''{{l|gmw-cfr|du}}''' <br>{{l|gmw-cfr|do}}; {{l|gmw-cfr|Do}} [C] <br> {{l|gmw-cfr|de}} (''red.'') || '''{{l|gmw-cfr|hä}}''' <br> {{l|gmw-cfr|e}} (''red.'') || '''{{l|gmw-cfr|sei}}''', {{l|gmw-cfr|sie}} <br> {{l|gmw-cfr|se}} (''red.'') || '''{{l|gmw-cfr|it}}''' <br> {{l|gmw-cfr|het}} [A] <br> {{l|gmw-cfr|et}}, {{l|gmw-cfr|'t}}, {{l|gmw-cfr|-'t}} (''red.'')
 |-
 ! Dative
-| '''{{l|gmw-cfr|mir}}''' <br> {{l|gmw-cfr|meer}} [C] <br> {{l|gmw-cfr|mer}} (''red.'') <br> [A] = ''acc.'' || '''{{l|gmw-cfr|dir}}''' <br> {{l|gmw-cfr|deer}} [C] <br> {{l|gmw-cfr|der}} (''red.'') <br /> [A] = ''acc.'' || '''{{l|gmw-cfr|im}}''' <br> {{l|gmw-cfr|höm}} [A] <br> {{l|gmw-cfr|em}} (''red.'') || '''{{l|gmw-cfr|ihr}}''' <br> {{l|gmw-cfr|ehr}} [C] <br> {{l|gmw-cfr|hör}} [A] (or = ''nom.'') <br> {{l|gmw-cfr|er}} (''red.'') || '''{{l|gmw-cfr|im}}''' <br> {{l|gmw-cfr|höm}} [A] (or = ''nom.'') <br> {{l|gmw-cfr|em}} (''red.'')
+| '''{{l|gmw-cfr|mir}}''' <br> {{l|gmw-cfr|meer}} [C] <br> {{l|gmw-cfr|mer}} (''red.'') <br> [A] = ''acc.'' || '''{{l|gmw-cfr|dir}}''' <br> {{l|gmw-cfr|deer}}; {{l|gmw-cfr|Deer}} [C] <br> {{l|gmw-cfr|der}} (''red.'') <br /> [A] = ''acc.'' || '''{{l|gmw-cfr|im}}''' <br> {{l|gmw-cfr|höm}} [A] <br> {{l|gmw-cfr|em}} (''red.'') || '''{{l|gmw-cfr|ihr}}''' <br> {{l|gmw-cfr|ehr}} [C] <br> {{l|gmw-cfr|hör}} [A] (or = ''nom.'') <br> {{l|gmw-cfr|er}} (''red.'') || '''{{l|gmw-cfr|im}}''' <br> {{l|gmw-cfr|höm}} [A] (or = ''nom.'') <br> {{l|gmw-cfr|em}} (''red.'')
 |-
 ! Accusative
-| '''{{l|gmw-cfr|mich}}''' || '''{{l|gmw-cfr|dich}}''' || '''{{l|gmw-cfr|in}}''' <br> {{l|gmw-cfr|en}} (''red.'') <br> [A] = ''dat.'' || = ''nom.'' <br> [A] = ''nom.'' or ''dat.'' || = ''nom.''
+| '''{{l|gmw-cfr|mich}}''' || '''{{l|gmw-cfr|dich}}; {{l|gmw-cfr|Dich}}''' || '''{{l|gmw-cfr|in}}''' <br> {{l|gmw-cfr|en}} (''red.'') <br> [A] = ''dat.'' || = ''nom.'' <br> [A] = ''nom.'' or ''dat.'' || = ''nom.''
 |-
 !  !! 1st Person Plural !! 2rd  Person Plural !! colspan="3" | 3rd Person Plural
 |-
 ! Nominative
-| '''{{l|gmw-cfr|mir}}''' <br> {{l|gmw-cfr|meer}} [C] <br> {{l|gmw-cfr|mer}} (''red.'') <br> {{l|gmw-cfr|vir}} [A], {{l|gmw-cfr|ver}} (''red.'') || '''{{l|gmw-cfr|ühr}}''' <br> {{l|gmw-cfr|ehr}} [C] <br> {{l|gmw-cfr|er}} (''red.'') || colspan="3" | '''{{l|gmw-cfr|sei}}''', {{l|gmw-cfr|sie}} <br> {{l|gmw-cfr|se}} (''red.'')
+| '''{{l|gmw-cfr|mir}}''' <br> {{l|gmw-cfr|meer}} [C] <br> {{l|gmw-cfr|mer}} (''red.'') <br> {{l|gmw-cfr|vir}} [A], {{l|gmw-cfr|ver}} (''red.'') || '''{{l|gmw-cfr|ühr}}''' <br> {{l|gmw-cfr|ehr}}; {{l|gmw-cfr|Ehr}} [C] <br> {{l|gmw-cfr|er}} (''red.'') || colspan="3" | '''{{l|gmw-cfr|sei}}''', {{l|gmw-cfr|sie}} <br> {{l|gmw-cfr|se}} (''red.'')
 |-
 ! Dative
-| '''{{l|gmw-cfr|us}}''', {{l|gmw-cfr|uns}} <br> {{l|gmw-cfr|os}}, {{l|gmw-cfr|ons}} [A] || '''{{l|gmw-cfr|üch}}''' || colspan="3" |  '''{{l|gmw-cfr|inne}}''' <br> {{l|gmw-cfr|hön}}, {{l|gmw-cfr|hönne}} [A] (or = ''nom.'') <br> {{l|gmw-cfr|en}} (''red.'')
+| '''{{l|gmw-cfr|us}}''', {{l|gmw-cfr|uns}} <br> {{l|gmw-cfr|os}}, {{l|gmw-cfr|ons}} [A] || '''{{l|gmw-cfr|üch}}; {{l|gmw-cfr|Üch}}''' || colspan="3" |  '''{{l|gmw-cfr|inne}}''' <br> {{l|gmw-cfr|hön}}, {{l|gmw-cfr|hönne}} [A] (or = ''nom.'') <br> {{l|gmw-cfr|en}} (''red.'')
 |-
 ! Accusative
 | = ''dat.'' || = ''dat.'' || colspan="3" | = ''nom.''
 |}
+In other dialects:
+* {{l|gmw-cfr|ät||it}} {{q|Düren}}
 
 ----
 
