--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -115,7 +115,7 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}
 * French: {{t+|fr|palper}}, {{t+|fr|toucher}}
 * Friulian: {{t|fur|sintî}}, {{t|fur|tastâ}}
 * Galician: {{t|gl|apalpar}}, {{t+|gl|sentir}}, {{t+|gl|tocar}}
-* German: {{t+|de|fühlen}}, {{t+|de|spüren}}
+* German: {{t+|de|fühlen}}, {{t+|de|spüren}}, {{t+|de|ertasten}} {{qualifier|by sense of touch}}
 * Greek: {{t+|el|αισθάνομαι}}
 * Haitian Creole: {{t|ht|santi}}
 * Hungarian: {{t+|hu|érez}}, {{t+|hu|tapint}}
