t+hsb:[[nopawa]] t+hsb:[[želwja]] ([[WT:EDIT|Assisted]]) <tortoise#62516845>

--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -130,6 +130,7 @@ Land tortoises are not native to Australia, yet traditionally freshwater turtles
 * Somali: {{t|so|diindiin}}
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|nopawa|f}} {{qualifier|tortoise or turtle}}, {{t|dsb|žołw|f}} {{qualifier|tortoise or turtle}}
+*: Upper Sorbian: {{t|hsb|nopawa|f}} {{qualifier|tortoise or turtle}}, {{t|hsb|želwja|f}} {{qualifier|tortoise or turtle}}
 * Spanish: {{qualifier|tortoise or turtle}} {{t+|es|tortuga|f}}, {{t|es|tortuga terrestre|f}}, {{t+|es|morrocoy|m}} {{qualifier|Venezuela}}
 * Swahili: {{t+|sw|kobe}}
 * Swedish: {{t+|sv|sköldpadda}}
