--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -12,6 +12,7 @@
 * {{rhymes|en|ɛlt}}
 
 ===Etymology 1===
+{{root|en|ine-pro|*pel- (beat)}}
 From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gmw-pro|*felt}} (compare {{cog|nl|vilt}}, {{cog|de|Filz}}, {{cog|da|filt}}, {{cog|fr|feutre}}), from {{der|en|ine-pro|*pilto}}, {{m|ine-pro|*pilso}} 'felt' (compare {{cog|la|pilleus||felt|pos=adjective}}, {{cog|cu|плъсть}}, {{cog|sq|plis}}, Ancient Greek {{m|grc|πῖλος}}), from *''pel-'' 'to beat'. More at [[anvil]].
 
 ====Noun====
