/* Derived terms */ <chose#62526822>

--- a/en/c/chose.6833.wikitext
+++ b/en/c/chose.6833.wikitext
@@ -66,9 +66,22 @@ From {{inh|fr|fro|chose}}, from {{inh|fr|la|causa}}. Compare {{cog|it|cosa}}, {{
 * {{desc|de|Chose|bor=1}}
 
 ====Derived terms====
-* {{l|fr|chosisme}}
-* {{l|fr|chosiste}}
-* {{l|fr|prendre les chose comme elles viennent}}
+{{col3|fr
+|à peu de choses près
+|autre chose
+|avant toutes choses
+|c'est la moindre des choses
+|chose jugée
+|chose promise, chose due
+|chosisme
+|chosiste
+|de deux choses l'une
+|faire la part des choses
+|plus ça change, plus c'est la même chose
+|prendre les chose comme elles viennent
+|quelque chose
+|tout chose
+}}
 
 ===Further reading===
 * {{R:TLFi}}
