--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -43,7 +43,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}} ({{m|nl|nieuw}} calqued 
 * {{l|en|Zealandian}}
 * {{l|en|New Zealandic}}
 * {{l|en|New Zealandress}}
-* {{l|en|New Zealand tea}}
+* {{l|en|New Zealand tea tree}}
 * {{l|en|Zealandia}}
 * {{l|en|Zeelandia}}
 * {{l|en|Zealandica}}
