--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -240,6 +240,12 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 * Yiddish: {{t|yi|ישׂראל|m|tr=yisroel|sc=Hebr}}
 {{trans-bottom}}
 
+{{trans-top|the Jews, taken collectively}}
+* Hebrew: {{t|he|עַם יִשְׂרָאֵל|m|tr=ám yisra'él}}, {{t+|he|יִשְׂרָאֵל|m|tr=yisra'él}}
+{{trans-mid}}
+* Yiddish: {{t|yi|עם־⁠ישׂראל|n|tr=am-yisroel}}, {{t|yi|ישׂראל|m|tr=yisroel}}
+{{trans-bottom}}
+
 {{trans-top|given name}}
 * Arabic: {{t+|ar|إِسْرَائِيلُ|m|tr=ʾisrāʾīl}}
 * Catalan: {{t+|ca|Israel|m}}
