/* Translations */ +el <curve#62545745>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -113,7 +113,7 @@ From {{der|en|la|curvus|t=bent, curved}}. {{doublet|en|curb}}.
 * Galician: {{t+|gl|curva|f}}
 * Georgian: {{t-needed|ka}}
 * German: {{t+|de|Kurve|f}}
-* Greek: {{t-needed|el}}
+* Greek: {{t+|el|καμπύλη|f}}
 * Hebrew: {{t+|he|עקומה|f|tr=akumá}}
 * Hungarian: {{t-needed|hu}}
 * Irish: {{t|ga|cuar|m}}
