/* Translations */ Remove punctuation mark <France#62579435>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -246,7 +246,7 @@ From {{inh|en|enm|France}}, borrowed from {{der|en|frm|France}}, from {{der|en|f
 * Tatar: {{t+|tt|Франция}}
 * Telugu: {{t+|te|ఫ్రాన్స్}}
 * Thai: {{t+|th|ฝรั่งเศส}}
-* Tibetan: {{t|bo|ཧྥ་རན་སི།}}
+* Tibetan: {{t|bo|ཧྥ་རན་སི}}
 * Tigrinya: {{t|ti|ፈረንሳይ}}
 * Tok Pisin: {{t|tpi|Pranis}}
 * Turkish: {{t+|tr|Fransa}}
