--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -284,7 +284,7 @@ From {{inh|en|enm|souken}}, {{m|enm|suken|}}, from {{inh|en|ang|sūcan|t=to suck
 * French: {{t|fr|[[être]] [[chiant]]}}, {{t|fr|[[être]] [[nul]]}}
 * German: {{t|de|mies sein}}, {{t|de|zum Kotzen sein}}, {{t|de|Scheiße sein}}
 * Greek: {{t|el|άστα να πάνε|sc=Grek}} {{qualifier|situation}}, {{t|el|είμαι μαλάκας|sc=Grek}} {{qualifier|person}}
-* Hungarian: {{t+|hu|ócska}}, {{t+|hu|vacak}}, {{q|colloquial}} {{t+|hu|pocsék}}, {{q|slang}} {{t+|hu|gáz}}
+* Hungarian: {{t+|hu|ócska}}, {{t+|hu|vacak}}, {{q|colloquial}} {{t+|hu|pocsék}}, {{q|slang}} {{t+|hu|gáz}}, {{q|vulgar}} {{t|hu|szar}}
 {{trans-mid}}
 * Icelandic: {{t|is|sökka}}, {{t+|is|ömurlegur|m}}
 * Italian: {{t|it|essere una schiappa}}, {{t|it|fare schifo}}
