--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -2,6 +2,7 @@
 [[Image:Jan Vermeer van Delft 003.jpg|thumb|Girl surrounded by curtains]]
 
 ===Etymology===
+{{root|en|ine-pro|*(s)ker- (turn)}}
 From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortine}}, from {{der|en|fro|cortine}}, from {{der|en|ML.|cōrtīna||curtain}}, from {{der|en|la|cohors||court, enclosure}}.
 
 ===Pronunciation===
