--- a/en/旳/旳.16923.wikitext
+++ b/en/旳/旳.16923.wikitext
@@ -11,13 +11,12 @@
 ----
 
 ==Chinese==
-{{zh-forms|alt=的}}
 
 ===Glyph origin===
 {{Han etym}}
 
 ===Definitions===
-{{zh-see|的|a|bright, clear}}
+{{zh-see|的|a|[[clear]]; [[red]] [[dot]] worn on the [[face]] by [[women]]}}
 
 ===References===
 * {{R:twedu|B01521}}
