--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -5,7 +5,7 @@
 * {{alter|en|Jugoslavia||common pre-WWII spelling}}
 
 ===Etymology===
-Borrowed from {{bor|en|sh|Jugoslavija}}, in turn from {{m|sh|jug||south}} and {{m|sh|slavija||''[[Slavia]]'', the land of the [[Slav]]s}}. Literally, ''the land of the southern Slavs''.
+Borrowed from {{bor|en|sh|Jugoslavija}}, in turn from {{m|sh|jug||south}} and {{m|sh|slavija||''[[Slavia]]'', the land of the [[Slav]]s}}. Literally, ''the land of the [[Wikipedia:South Slavs|South Slavs]]''.
 
 ===Pronunciation===
 * {{IPA|en|/juːɡəˈslɑːvi.ə/}}
