--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -65,7 +65,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Portuguese: {{t+|pt|loiro}}, {{t+|pt|louro}}
 * Russian: {{t+|ru|све́тлый}}, {{t+|ru|ру́сый}}
 * Scottish Gaelic: {{t|gd|bàn}}, {{t|gd|fionn}}
-* Spanish: {{t+|es|rubio}}, {{t+|es|macho}} {{qualifier|hair, Costa Rica}}
+* Spanish: {{t+|es|rubio}}, {{t+|es|macho}} {{qualifier|hair, Costa Rica, colloquial}}
 * Swedish: {{t+|sv|blond}}
 * Tagalog: {{t|tl|buhuk-mais}}
 * Turkish: {{t+|tr|sarışın}}
