--- a/en/旱/旱.16921.wikitext
+++ b/en/旱/旱.16921.wikitext
@@ -22,6 +22,9 @@
 ===Glyph origin===
 {{Han etym}}
 
+===Etymology===
+From the same {{inh|zh|sit-pro|-}} root as {{och-l|乾|dry}}.
+
 ===Pronunciation===
 {{zh-pron
 |m=hàn
