--- a/en/l/lies.16986.wikitext
+++ b/en/l/lies.16986.wikitext
@@ -35,7 +35,7 @@ From {{inh|af|nl|lies}}.
 ===Noun===
 {{af-noun|e|pl2=lieste}}
 
-# [[loins]], region near the [[groin]]
+# the [[groin]]
 
 {{topics|af|Body parts}}
 
