/* Noun */Correction <zenith#62716082>

--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -40,16 +40,15 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, from {{der|en|ar|سَمْ
 * {{l|en|antizenith}}
 
 ====Derived terms====
-* {{l|en|zenithal}}
-* {{l|en|zenithally}}
-* {{l|en|zenithic}}
-* {{l|en|zenithward}}
+{{der3|en
+|zenith telescope
+|zenithal
+|zenithally
+|zenithic
+|zenithward}}
 
 ====Related terms====
 * {{l|en|azimuth}}, {{l|en|nadir}}
-
-====Derived terms====
-* {{l|en|zenith telescope}}
 
 ====Translations====
 {{trans-top|astronomy: point vertically above a position or observer}}
