/* Derived terms */ edited using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]] <France#62732143>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -313,6 +313,7 @@ From {{inh|fr|frm|France}}, from {{inh|fr|fro|France}}, from {{inh|fr|ML.|-}} or
 * {{l|fr|faire une carte de France}}
 * {{l|fr|français}}, {{l|fr|Français}}
 * {{l|fr|Marie-France}} (given name)
+* {{l|fr|melon de France}}
 * {{l|fr|vieille France}}
 
 ====Descendants====
