/* Central Huasteca Nahuatl */ <Israel#62737741>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -330,6 +330,17 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 
 ----
 
+==Central Nahuatl==
+
+===Proper noun===
+{{head|nhn|proper noun}}
+
+# [[Israel]]
+
+[[Category:nhn:Countries]]
+[[Category:Amecameca Central Nahuatl]]
+----
+
 ==Finnish==
 {{wikipedia|lang=fi}}
 
