/* Central Huasteca Nahuatl */ <Israel#62739643>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -324,9 +324,7 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 ===Proper noun===
 {{head|nch|proper noun}}
 
-# [[Israel]].
-
-[[Category:nch:Countries]]
+# {{place|nch|country|cont/Asia|t=Israel}}
 
 ----
 
